@@ -11,6 +11,7 @@ September 2014
  ! Fix problems caused by opcode cache extensions (Reported by psrustik)
  ! Fix bug with select lists when the value hasn't been selected yet (Reported by Suki)
  ! SMF tries to stick ORDER BY NULL onto INSERT IGNORE queries containing sub-selects with a GROUP BY statement, causing a database error (Reported by guest)
+ ! "Show Results" button always shown for polls as long as you can vote in them (Reported by Chainy)
 
 SMF 2.0.8														   June 18 2014
 ===============================================================================
